sandbox/new-c-api/tinyusdz_c.h

/* ============================================================================
 * Core Types and Enums
 * ============================================================================ */

/**
 * @brief Opaque handle types
 */
typedef struct tusdz_stage_impl* tusdz_stage;
typedef struct tusdz_prim_impl* tusdz_prim;
typedef struct tusdz_value_impl* tusdz_value;
/**
 * @brief Result codes for API functions
 */
typedef enum {
    TUSDZ_SUCCESS = 0,
    TUSDZ_ERROR_FILE_NOT_FOUND = -1,
    TUSDZ_ERROR_PARSE_FAILED = -2,
    TUSDZ_ERROR_OUT_OF_MEMORY = -3,
    TUSDZ_ERROR_INVALID_ARGUMENT = -4,
    TUSDZ_ERROR_NOT_SUPPORTED = -5,
    TUSDZ_ERROR_COMPOSITION_FAILED = -6,
    TUSDZ_ERROR_INVALID_FORMAT = -7,
    TUSDZ_ERROR_IO_ERROR = -8,
    TUSDZ_ERROR_INTERNAL = -99
} tusdz_result;
/**
 * @brief USD prim types
 */
typedef enum {
    TUSDZ_PRIM_UNKNOWN = 0,
    TUSDZ_PRIM_XFORM,
    TUSDZ_PRIM_MESH,
    TUSDZ_PRIM_MATERIAL,
    TUSDZ_PRIM_SHADER,
    TUSDZ_PRIM_CAMERA,
    TUSDZ_PRIM_DISTANT_LIGHT,
    TUSDZ_PRIM_SPHERE_LIGHT,
    TUSDZ_PRIM_RECT_LIGHT,
    TUSDZ_PRIM_DISK_LIGHT,
    TUSDZ_PRIM_CYLINDER_LIGHT,
    TUSDZ_PRIM_DOME_LIGHT,
    TUSDZ_PRIM_SKELETON,
    TUSDZ_PRIM_SKELROOT,
    TUSDZ_PRIM_SKELANIMATION,
    TUSDZ_PRIM_SCOPE,
    TUSDZ_PRIM_GEOMSUBSET,
    TUSDZ_PRIM_SPHERE,
    TUSDZ_PRIM_CUBE,
    TUSDZ_PRIM_CYLINDER,
    TUSDZ_PRIM_CAPSULE,
    TUSDZ_PRIM_CONE,
    TUSDZ_PRIM_NURBS_PATCH,
    TUSDZ_PRIM_NURBS_CURVE,
    TUSDZ_PRIM_BASIS_CURVES,
    TUSDZ_PRIM_POINT_INSTANCER,
    TUSDZ_PRIM_VOLUME
} tusdz_prim_type;
/**
 * @brief Value types for USD properties
 */
typedef enum {
    TUSDZ_VALUE_NONE = 0,
    /* Scalar types */
    TUSDZ_VALUE_BOOL,
    TUSDZ_VALUE_INT,
    TUSDZ_VALUE_UINT,
    TUSDZ_VALUE_INT64,
    TUSDZ_VALUE_UINT64,
    TUSDZ_VALUE_HALF,
    TUSDZ_VALUE_FLOAT,
    TUSDZ_VALUE_DOUBLE,
    /* String types */
    TUSDZ_VALUE_STRING,
    TUSDZ_VALUE_TOKEN,
    TUSDZ_VALUE_ASSET_PATH,
    /* Vector types */
    TUSDZ_VALUE_INT2,
    TUSDZ_VALUE_INT3,
    TUSDZ_VALUE_INT4,
    TUSDZ_VALUE_HALF2,
    TUSDZ_VALUE_HALF3,
    TUSDZ_VALUE_HALF4,
    TUSDZ_VALUE_FLOAT2,
    TUSDZ_VALUE_FLOAT3,
    TUSDZ_VALUE_FLOAT4,
    TUSDZ_VALUE_DOUBLE2,
    TUSDZ_VALUE_DOUBLE3,
    TUSDZ_VALUE_DOUBLE4,
    /* Matrix types */
    TUSDZ_VALUE_MATRIX2D,
    TUSDZ_VALUE_MATRIX3D,
    TUSDZ_VALUE_MATRIX4D,
    /* Quaternion types */
    TUSDZ_VALUE_QUATH,
    TUSDZ_VALUE_QUATF,
    TUSDZ_VALUE_QUATD,
    /* Color types */
    TUSDZ_VALUE_COLOR3F,
    TUSDZ_VALUE_COLOR3D,
    TUSDZ_VALUE_COLOR4F,
    TUSDZ_VALUE_COLOR4D,
    /* Other types */
    TUSDZ_VALUE_NORMAL3F,
    TUSDZ_VALUE_NORMAL3D,
    TUSDZ_VALUE_POINT3F,
    TUSDZ_VALUE_POINT3D,
    TUSDZ_VALUE_TEXCOORD2F,
    TUSDZ_VALUE_TEXCOORD2D,
    TUSDZ_VALUE_TEXCOORD3F,
    TUSDZ_VALUE_TEXCOORD3D,
    /* Complex types */
    TUSDZ_VALUE_ARRAY,
    TUSDZ_VALUE_DICTIONARY,
    TUSDZ_VALUE_TIME_SAMPLES,
    TUSDZ_VALUE_RELATIONSHIP
} tusdz_value_type;
/**
 * @brief Get number of child prims
 * @param prim Parent prim
 * @return Number of children
 */
TUSDZ_API size_t tusdz_prim_get_child_count(tusdz_prim prim);
/**
 * @brief Get child prim at index
 * @param prim Parent prim
 * @param index Child index
 * @return Child prim (borrowed reference, do not free)
 */
TUSDZ_API tusdz_prim tusdz_prim_get_child_at(tusdz_prim prim, size_t index);
/**
 * @brief Get prim name
 * @param prim Prim handle
 * @return Name string (borrowed, do not free)
 */
TUSDZ_API const char* tusdz_prim_get_name(tusdz_prim prim);
/**
 * @brief Get prim type
 * @param prim Prim handle
 * @return Prim type enum
 */
TUSDZ_API tusdz_prim_type tusdz_prim_get_type(tusdz_prim prim);
/* ============================================================================
 * Tier 2: Extended Core API
 * ============================================================================ */

/**
 * @brief Get full path of prim
 * @param prim Prim handle
 * @return Path string (borrowed, do not free)
 */
TUSDZ_API const char* tusdz_prim_get_path(tusdz_prim prim);
/**
 * @brief Check if prim is specific type
 * @param prim Prim handle
 * @param type Type to check
 * @return 1 if matches, 0 otherwise
 */
TUSDZ_API int tusdz_prim_is_type(tusdz_prim prim, tusdz_prim_type type);
/**
 * @brief Get type name as string
 * @param prim Prim handle
 * @return Type name (e.g., "Mesh", "Xform")
 */
TUSDZ_API const char* tusdz_prim_get_type_name(tusdz_prim prim);
/**
 * @brief Get number of properties on prim
 * @param prim Prim handle
 * @return Property count
 */
TUSDZ_API size_t tusdz_prim_get_property_count(tusdz_prim prim);
/**
 * @brief Get property name at index
 * @param prim Prim handle
 * @param index Property index
 * @return Property name (borrowed, do not free)
 */
TUSDZ_API const char* tusdz_prim_get_property_name_at(tusdz_prim prim, size_t index);
/**
 * @brief Get property value by name
 * @param prim Prim handle
 * @param name Property name
 * @return Value handle (must be freed with tusdz_value_free)
 */
TUSDZ_API tusdz_value tusdz_prim_get_property(tusdz_prim prim, const char* name);
/**
 * @brief Get value type
 * @param value Value handle
 * @return Value type enum
 */
TUSDZ_API tusdz_value_type tusdz_value_get_type(tusdz_value value);
/**
 * @brief Check if value is an array
 * @param value Value handle
 * @return 1 if array, 0 otherwise
 */
TUSDZ_API int tusdz_value_is_array(tusdz_value value);
/**
 * @brief Get array length for array values
 * @param value Value handle
 * @return Array length (0 if not an array)
 */
TUSDZ_API size_t tusdz_value_get_array_size(tusdz_value value);
TUSDZ_API tusdz_result tusdz_value_get_int(tusdz_value value, int* out);
TUSDZ_API tusdz_result tusdz_value_get_float(tusdz_value value, float* out);
TUSDZ_API tusdz_result tusdz_value_get_double(tusdz_value value, double* out);
/**
 * @brief Convert result code to string
 * @param result Result code
 * @return String description
 */
TUSDZ_API const char* tusdz_result_to_string(tusdz_result result);
/**
 * @brief Convert prim type to string
 * @param type Prim type
 * @return Type name string
 */
TUSDZ_API const char* tusdz_prim_type_to_string(tusdz_prim_type type);
/**
 * @brief Convert value type to string
 * @param type Value type
 * @return Type name string
 */
TUSDZ_API const char* tusdz_value_type_to_string(tusdz_value_type type);
/* ============================================================================
 * Debug and Diagnostic Functions
 * ============================================================================ */

/**
 * @brief Print stage hierarchy to stdout
 * @param stage Stage handle
 * @param max_depth Maximum depth to print (0 = all)
 */
TUSDZ_API void tusdz_stage_print_hierarchy(tusdz_stage stage, int max_depth);