sandbox/new-c-api/tinyusdz.py

"""
TinyUSDZ Python Bindings

Pure Python ctypes bindings for the TinyUSDZ C99 API.
No compilation or external dependencies required.

Usage:
    >>> import tinyusdz
    >>> tinyusdz.init()
    >>> stage = tinyusdz.load_from_file("model.usd")
    >>> root = stage.get_root_prim()
    >>> print(root.name)
    >>> root.print_hierarchy()
    >>> tinyusdz.shutdown()
"""

import ctypes
import ctypes.util
from pathlib import Path
from typing import Optional, Tuple, List, Union
import sys

# ============================================================================
# Load C Library
# ============================================================================

def _find_library():
    """Find the TinyUSDZ C library"""
    # Try different naming conventions
    names = [
        "tinyusdz_c",
        "libtinyusdz_c",
        "libtinyusdz_c.so",
        "libtinyusdz_c.so.1",
        "libtinyusdz_c.dylib",
        "tinyusdz_c.dll",
    ]

    for name in names:
        lib = ctypes.util.find_library(name)
        if lib:
            return lib

    # Try local paths
    local_paths = [
        Path(__file__).parent / "libtinyusdz_c.so",
        Path(__file__).parent / "libtinyusdz_c.a",
        Path(__file__).parent / "build" / "libtinyusdz_c.so",
        Path(__file__).parent.parent.parent / "build" / "libtinyusdz_c.so",
    ]

    for path in local_paths:
        if path.exists():
            return str(path)

    return None


# Load the library
_lib_path = _find_library()
if _lib_path is None:
    raise RuntimeError(
        "Cannot find libtinyusdz_c. Make sure to build the C API first:\n"
        "  mkdir build && cd build && cmake .. && make"
    )

_lib = ctypes.CDLL(_lib_path)

# ============================================================================
# Type Definitions
# ============================================================================

# Opaque handle types
class Stage:
    """USD Stage handle"""
    pass


class Prim:
    """USD Prim handle"""
    pass


class Value:
    """USD Value handle"""
    pass


class Layer:
    """USD Layer handle"""
    pass


# Result codes
class Result:
    SUCCESS = 0
    ERROR_FILE_NOT_FOUND = -1
    ERROR_PARSE_FAILED = -2
    ERROR_OUT_OF_MEMORY = -3
    ERROR_INVALID_ARGUMENT = -4
    ERROR_NOT_SUPPORTED = -5
    ERROR_COMPOSITION_FAILED = -6
    ERROR_INVALID_FORMAT = -7
    ERROR_IO_ERROR = -8
    ERROR_INTERNAL = -99

    @staticmethod
    def to_string(result: int) -> str:
        """Convert result code to string"""
        _lib.tusdz_result_to_string.restype = ctypes.c_char_p
        _lib.tusdz_result_to_string.argtypes = [ctypes.c_int]
        return _lib.tusdz_result_to_string(result).decode('utf-8')


# Format types
class Format:
    AUTO = 0
    USDA = 1  # ASCII
    USDC = 2  # Binary/Crate
    USDZ = 3  # Zip archive


# Prim types
class PrimType:
    UNKNOWN = 0
    XFORM = 1
    MESH = 2
    MATERIAL = 3
    SHADER = 4
    CAMERA = 5
    DISTANT_LIGHT = 6
    SPHERE_LIGHT = 7
    RECT_LIGHT = 8
    DISK_LIGHT = 9
    CYLINDER_LIGHT = 10
    DOME_LIGHT = 11
    SKELETON = 12
    SKELROOT = 13
    SKELANIMATION = 14
    SCOPE = 15
    GEOMSUBSET = 16
    SPHERE = 17
    CUBE = 18
    CYLINDER = 19
    CAPSULE = 20
    CONE = 21
    NURBS_PATCH = 22
    NURBS_CURVE = 23
    BASIS_CURVES = 24
    POINT_INSTANCER = 25
    VOLUME = 26

    @staticmethod
    def to_string(prim_type: int) -> str:
        """Convert prim type to string"""
        _lib.tusdz_prim_type_to_string.restype = ctypes.c_char_p
        _lib.tusdz_prim_type_to_string.argtypes = [ctypes.c_int]
        return _lib.tusdz_prim_type_to_string(prim_type).decode('utf-8')


# Value types
class ValueType:
    NONE = 0
    BOOL = 1
    INT = 2
    UINT = 3
    FLOAT = 5
    DOUBLE = 6
    STRING = 7
    FLOAT2 = 13
    FLOAT3 = 14
    FLOAT4 = 15
    DOUBLE2 = 16
    DOUBLE3 = 17
    DOUBLE4 = 18
    MATRIX3D = 22
    MATRIX4D = 23
    QUATF = 24
    QUATD = 25
    COLOR3F = 26
    COLOR3D = 27
    NORMAL3F = 29
    NORMAL3D = 30
    POINT3F = 31
    POINT3D = 32
    TEXCOORD2F = 33
    TEXCOORD2D = 34
    ARRAY = 41
    TIME_SAMPLES = 43

    @staticmethod
    def to_string(value_type: int) -> str:
        """Convert value type to string"""
        _lib.tusdz_value_type_to_string.restype = ctypes.c_char_p
        _lib.tusdz_value_type_to_string.argtypes = [ctypes.c_int]
        return _lib.tusdz_value_type_to_string(value_type).decode('utf-8')


class LoadOptions(ctypes.Structure):
    """Load options for USD files"""
    _fields_ = [
        ("max_memory_limit_mb", ctypes.c_size_t),
        ("max_depth", ctypes.c_int),
        ("enable_composition", ctypes.c_int),
        ("strict_mode", ctypes.c_int),
        ("structure_only", ctypes.c_int),
        ("asset_resolver", ctypes.c_void_p),
        ("asset_resolver_data", ctypes.c_void_p),
    ]


# ============================================================================
# Wrapper Classes
# ============================================================================

class PrimWrapper:
    """Wrapper for USD Prim"""

    def __init__(self, prim_handle):
        self._handle = prim_handle

    @property
    def name(self) -> str:
        """Get prim name"""
        _lib.tusdz_prim_get_name.restype = ctypes.c_char_p
        _lib.tusdz_prim_get_name.argtypes = [ctypes.c_void_p]
        name = _lib.tusdz_prim_get_name(self._handle)
        return name.decode('utf-8') if name else ""

    @property
    def path(self) -> str:
        """Get prim path"""
        _lib.tusdz_prim_get_path.restype = ctypes.c_char_p
        _lib.tusdz_prim_get_path.argtypes = [ctypes.c_void_p]
        path = _lib.tusdz_prim_get_path(self._handle)
        return path.decode('utf-8') if path else ""

    @property
    def prim_type(self) -> int:
        """Get prim type"""
        _lib.tusdz_prim_get_type.restype = ctypes.c_int
        _lib.tusdz_prim_get_type.argtypes = [ctypes.c_void_p]
        return _lib.tusdz_prim_get_type(self._handle)

    @property
    def type_name(self) -> str:
        """Get prim type name"""
        _lib.tusdz_prim_get_type_name.restype = ctypes.c_char_p
        _lib.tusdz_prim_get_type_name.argtypes = [ctypes.c_void_p]
        name = _lib.tusdz_prim_get_type_name(self._handle)
        return name.decode('utf-8') if name else "Unknown"

    def is_type(self, prim_type: int) -> bool:
        """Check if prim is specific type"""
        _lib.tusdz_prim_is_type.restype = ctypes.c_int
        _lib.tusdz_prim_is_type.argtypes = [ctypes.c_void_p, ctypes.c_int]
        return bool(_lib.tusdz_prim_is_type(self._handle, prim_type))

    @property
    def child_count(self) -> int:
        """Get number of child prims"""
        _lib.tusdz_prim_get_child_count.restype = ctypes.c_size_t
        _lib.tusdz_prim_get_child_count.argtypes = [ctypes.c_void_p]
        return _lib.tusdz_prim_get_child_count(self._handle)

    def get_child(self, index: int) -> Optional['PrimWrapper']:
        """Get child prim at index"""
        _lib.tusdz_prim_get_child_at.restype = ctypes.c_void_p
        _lib.tusdz_prim_get_child_at.argtypes = [ctypes.c_void_p, ctypes.c_size_t]
        child = _lib.tusdz_prim_get_child_at(self._handle, index)
        return PrimWrapper(child) if child else None

    def get_children(self) -> List['PrimWrapper']:
        """Get all child prims"""
        return [self.get_child(i) for i in range(self.child_count)]

    @property
    def property_count(self) -> int:
        """Get number of properties"""
        _lib.tusdz_prim_get_property_count.restype = ctypes.c_size_t
        _lib.tusdz_prim_get_property_count.argtypes = [ctypes.c_void_p]
        return _lib.tusdz_prim_get_property_count(self._handle)

    def get_property_name(self, index: int) -> str:
        """Get property name at index"""
        _lib.tusdz_prim_get_property_name_at.restype = ctypes.c_char_p
        _lib.tusdz_prim_get_property_name_at.argtypes = [ctypes.c_void_p, ctypes.c_size_t]
        name = _lib.tusdz_prim_get_property_name_at(self._handle, index)
        return name.decode('utf-8') if name else ""

    def get_property(self, name: str) -> Optional['ValueWrapper']:
        """Get property by name"""
        _lib.tusdz_prim_get_property.restype = ctypes.c_void_p
        _lib.tusdz_prim_get_property.argtypes = [ctypes.c_void_p, ctypes.c_char_p]
        value = _lib.tusdz_prim_get_property(self._handle, name.encode('utf-8'))
        return ValueWrapper(value) if value else None

    @property
    def properties(self) -> dict:
        """Get all properties as dict"""
        result = {}
        for i in range(self.property_count):
            name = self.get_property_name(i)
            result[name] = self.get_property(name)
        return result

    def is_mesh(self) -> bool:
        """Check if this is a mesh prim"""
        return self.is_type(PrimType.MESH)

    def is_xform(self) -> bool:
        """Check if this is a transform prim"""
        return self.is_type(PrimType.XFORM)

    def print_hierarchy(self, max_depth: int = -1):
        """Print prim hierarchy to stdout"""
        _lib.tusdz_stage_print_hierarchy.argtypes = [ctypes.c_void_p, ctypes.c_int]
        _lib.tusdz_stage_print_hierarchy(self._handle, max_depth)

    def __repr__(self) -> str:
        return f"PrimWrapper(name='{self.name}', type='{self.type_name}', children={self.child_count})"


class ValueWrapper:
    """Wrapper for USD Value"""

    def __init__(self, value_handle):
        self._handle = value_handle

    @property
    def value_type(self) -> int:
        """Get value type"""
        _lib.tusdz_value_get_type.restype = ctypes.c_int
        _lib.tusdz_value_get_type.argtypes = [ctypes.c_void_p]
        return _lib.tusdz_value_get_type(self._handle)

    @property
    def type_name(self) -> str:
        """Get value type name"""
        return ValueType.to_string(self.value_type)

    @property
    def is_array(self) -> bool:
        """Check if value is an array"""
        _lib.tusdz_value_is_array.restype = ctypes.c_int
        _lib.tusdz_value_is_array.argtypes = [ctypes.c_void_p]
        return bool(_lib.tusdz_value_is_array(self._handle))

    @property
    def array_size(self) -> int:
        """Get array size"""
        _lib.tusdz_value_get_array_size.restype = ctypes.c_size_t
        _lib.tusdz_value_get_array_size.argtypes = [ctypes.c_void_p]
        return _lib.tusdz_value_get_array_size(self._handle)

    def get_float(self) -> Optional[float]:
        """Get as float"""
        value = ctypes.c_float()
        _lib.tusdz_value_get_float.restype = ctypes.c_int
        _lib.tusdz_value_get_float.argtypes = [ctypes.c_void_p, ctypes.POINTER(ctypes.c_float)]
        if _lib.tusdz_value_get_float(self._handle, ctypes.byref(value)) == Result.SUCCESS:
            return float(value.value)
        return None

    def get_double(self) -> Optional[float]:
        """Get as double"""
        value = ctypes.c_double()
        _lib.tusdz_value_get_double.restype = ctypes.c_int
        _lib.tusdz_value_get_double.argtypes = [ctypes.c_void_p, ctypes.POINTER(ctypes.c_double)]
        if _lib.tusdz_value_get_double(self._handle, ctypes.byref(value)) == Result.SUCCESS:
            return float(value.value)
        return None

    def get_int(self) -> Optional[int]:
        """Get as int"""
        value = ctypes.c_int()
        _lib.tusdz_value_get_int.restype = ctypes.c_int
        _lib.tusdz_value_get_int.argtypes = [ctypes.c_void_p, ctypes.POINTER(ctypes.c_int)]
        if _lib.tusdz_value_get_int(self._handle, ctypes.byref(value)) == Result.SUCCESS:
            return int(value.value)
        return None
